--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>AI Exam Doubt Solver</title>
-  <link rel="stylesheet" href="style.css">
+    <title>AI Exam Doubt Solver</title>
+    <link rel="stylesheet" href="/static/style.css">
+    <script src="/static/script.js" defer></script>
 </head>
 <body>
 
