Fix HTML ids for JS

--- a/index.html
+++ b/index.html
@@ -6,15 +6,15 @@
     <script src="/static/script.js" defer></script>
 </head>
 <body>
-
 <h2>Ask Your Exam Doubt</h2>
 
-<textarea id="question"></textarea>
-<br><br>
-<button onclick="ask()">Ask AI</button>
+<input type="text" id="question" placeholder="Type your question" />
+
+<button onclick="askAI()">Ask AI</button>
 
 <p id="answer"></p>
 
 <script src="script.js"></script>
+
 </body>
 </html>
