Fix script loading and answer placeholder

--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
 
 <button onclick="askAI()">Ask AI</button>
 
-<p id="answer"></p>
+<p id="answer">Ask a question to get answer...</p>
 
-<script src="script.js"></script>
+
 
 </body>
 </html>
