--- a/index.html
+++ b/index.html
@@ -1,20 +1,18 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>AI Exam Doubt Solver</title>
-    <link rel="stylesheet" href="/static/style.css">
-    <script src="/static/script.js" defer></script>
+  <title>AI Exam Doubt Solver</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
+
 <h2>Ask Your Exam Doubt</h2>
 
 <input type="text" id="question" placeholder="Type your question" />
-
 <button onclick="askAI()">Ask AI</button>
 
-<p id="answer">Ask a question to get answer...</p>
+<p id="answer"></p>
 
-
-
+<script src="script.js"></script>
 </body>
 </html>
