--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html>
 <head>
   <title>AI Exam Doubt Solver</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="/static/style.css">
+  <script src="/static/script.js" defer></script>
 </head>
 <body>
 
@@ -11,7 +12,7 @@
 <input type="text" id="question" placeholder="Type your question" />
 <button onclick="askAI()">Ask AI</button>
 
-<p id="answer"></p>
+<p id="answer">Ask a question to get answer...</p>
 
 </body>
 </html>
