--- a/index.html
+++ b/index.html
@@ -1,18 +1,32 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+  <meta charset="UTF-8">
   <title>AI Exam Doubt Solver</title>
-  <link rel="stylesheet" href="style.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+  <link rel="stylesheet" href="/static/style.css">
+  <script src="/static/script.js" defer></script>
 </head>
 <body>
 
-<h2>Ask Your Exam Doubt</h2>
+  <div class="container">
+    <h1>📘 AI Exam Doubt Solver</h1>
+    <p class="subtitle">Get exam-ready answers in simple language</p>
 
-<input type="text" id="question" placeholder="Type your question" />
-<button onclick="askAI()">Ask AI</button>
+    <div class="input-box">
+      <input 
+        type="text" 
+        id="question" 
+        placeholder="Type your exam question here..."
+      >
+      <button onclick="askAI()">Ask AI</button>
+    </div>
 
-<p id="answer"></p>
+    <div id="answer" class="answer-box">
+      <span class="hint">Your answer will appear here...</span>
+    </div>
+  </div>
 
-<script src="script.js"></script>
 </body>
 </html>
