--- a/index.html
+++ b/index.html
@@ -9,6 +9,14 @@
   <script src="/static/script.js" defer></script>
 </head>
 <body>
+  <!-- Loader -->
+<div id="loader">
+  <div class="loader-card">
+    <div class="spinner"></div>
+    <h2>AI is thinking...</h2>
+    <p>Please wait, preparing your answer</p>
+  </div>
+</div>
 
   <div class="container">
     <h1>📘 AI Exam Doubt Solver</h1>
