--- a/index.html
+++ b/index.html
@@ -18,22 +18,23 @@
   </div>
 </div>
 
-  <div class="container">
-    <h1>📘 AI Exam Doubt Solver</h1>
-    <p class="subtitle">Get exam-ready answers in simple language</p>
+  <div class="chat-container">
+  <div class="chat-header">📘 AI Exam Doubt Solver</div>
 
-    <div class="input-box">
-      <input 
-        type="text" 
-        id="question" 
-        placeholder="Type your exam question here..."
-      >
-      <button onclick="askAI()">Ask AI</button>
+  <div id="chatBox" class="chat-box">
+    <div class="bot-msg">
+      👋 Hello! Apna exam doubt pucho.
     </div>
+  </div>
 
-    <div id="answer" class="answer-box">
-      <span class="hint">Your answer will appear here...</span>
-    </div>
+  <div class="chat-input">
+    <input
+      id="question"
+      type="text"
+      placeholder="Type your question..."
+    />
+    <button onclick="askAI()">➤</button>
+  </div>
   </div>
 
 </body>
