--- a/index.html
+++ b/index.html
@@ -19,9 +19,10 @@
 </div>
 
   <div class="chat-container">
-  <div class="chat-header">📘 AI Exam Doubt Solver</div>
+  <div class="chat-header">🤖 AI Exam Doubt Solver</div>
 
-  <div id="chatBox" class="chat-box">
+  <!-- IMPORTANT CHANGE HERE -->
+  <div id="answer" class="chat-box">
     <div class="bot-msg">
       👋 Hello! Apna exam doubt pucho.
     </div>
